samples/_failures_safe/1761496182_4f66f3_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_8fc5d82b.c: In function ‘print_compression_info’:
./samples/SAFE/__tmp_8fc5d82b.c:135:16: error: missing terminating " character
  135 |         printf("  Block %u: Offset=%u,
      |                ^~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_8fc5d82b.c:135:9: error: expected expression at end of input
  135 |         printf("  Block %u: Offset=%u,
      |         ^~~~~~
./samples/SAFE/__tmp_8fc5d82b.c:135:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_8fc5d82b.c:135:9: error: expected declaration or statement at end of input
